# emergent_probe_evasion

./: .gitignore
probe-evasion/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
probe-evasion/.claude/agents/: prompt-generation.md
probe-evasion/.streamlit/: config.toml
probe-evasion/configs/experiments/: baseline.yaml  evasion_affordances.yaml  evasion_v2_quick.yaml  informed.yaml  probe_robustness.yaml  qa_probe_training.yaml  qa_probe_training_v2.yaml
probe-evasion/configs/models/: kimi.yaml  qwen2_5_32b.yaml  qwq_32b.yaml
probe-evasion/configs/probes/: trees.yaml  weighted_combination.yaml
probe-evasion/docs/: experimental_regimes.md
probe-evasion/experiments/01_trees_baseline/: config.yaml  run.sh
probe-evasion/experiments/02_trees_informed/: config.yaml  run.sh
probe-evasion/experiments/03_trees_informed_no_monitor/: config.yaml  run.sh
probe-evasion/scripts/: analyze_evasion_results.py  analyze_results.py  assign_splits.py  build_concept_dataset.py  build_dashboard.py  eval_adversarial.py  evaluate_probes_qa.py  generate_and_extract.py  generate_prefix_variants.py  generate_questions_llm.py  interactive_explorer.py  padding_ablation.py  prefill_ablation.py  run_evasion_experiment.py  run_preliminary.py  scrape_wikipedia.py  setup_cluster.sh  sweep.py  train_probes_qa.py  validate_dataset.py
probe-evasion/scripts/dashboard/: app.py  experiment_runner.py  state.py
probe-evasion/src/: __init__.py
probe-evasion/src/analysis/: __init__.py  aggregate_results.py  compare_conditions.py  visualize.py
(+114 files in other folders)
